src/main/java/com/example/study/practical_programming/chapter01/bad/Food.java
package com.example.study.practical_programming.chapter01.bad;

import lombok.Getter;

@Getter
public class Food {

    private long price;
    private long originCost;
}
